testdata/baselines/reference/submodule/conformance/jsDeclarationsExportDoubleAssignmentInClosure.errors.txt
index.js(3,5): error TS6425: Nested CommonJS export constructs cannot be serialized for declaration emit.
index.js(9,5): error TS6425: Nested CommonJS export constructs cannot be serialized for declaration emit.


==== index.js (2 errors) ====
    // @ts-nocheck
    function foo() {
        module.exports = exports = function (o) {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            return (o == null) ? create(base) : defineProperties(Object(o), descriptors);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        };
    ~~~~~
!!! error TS6425: Nested CommonJS export constructs cannot be serialized for declaration emit.
        const m = function () {
            // I have no idea what to put here
        }
        exports.methods = m;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS6425: Nested CommonJS export constructs cannot be serialized for declaration emit.
    }
    